<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Support\Str;

class Kategori extends Model
{
    protected $table = 'kategoris';
    protected $primaryKey = 'id_kategori';
    protected $fillable = ['kode_kategori', 'nama_kategori', 'slug', 'description'];

    protected static function booted(): void
    {
        static::saving(function (self $kategori) {
            if (empty($kategori->slug)) {
                $kategori->slug = Str::slug($kategori->nama_kategori);
            }
        });
    }

    public function m_barangs()
    {
        return $this->hasMany(MBarang::class, 'id_kategori', 'id_kategori');
    }
}
